# model-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/scripts/: deploy_lambda.py
.github/workflows/: publish-image-dev.yml  publish-image.yml  release-pr.yml
src/: main.py
src/api/: exception_handlers.py
src/api/routers/: models.py  predict.py  train.py
src/api/schemas/: models.py  predict.py  train.py
src/bootstrap/: dependencies.py  settings.py
src/contexts/features/application/: build_feature_matrix.py  commands.py
src/contexts/features/domain/models/: delivery_context.py  feature.py
src/contexts/features/domain/registry/: feature_registry.py
src/contexts/features/domain/strategies/: innings_state.py  outcome.py  player_state.py
src/contexts/features/infrastructure/postgres/: delivery_context_repository.py
src/contexts/modeling/application/: commands.py  list_trained_models.py  run_model.py  train_model.py
src/contexts/modeling/config/: models.yaml
src/contexts/modeling/domain/: errors.py
src/contexts/modeling/domain/models/: filter_key.py  model_definition.py  trained_model_ref.py
src/shared/persistence/postgres/: engine.py  models.py
tests/: conftest.py
tests/unit/api/: test_predict_schema.py
tests/unit/features/: test_innings_state_strategies.py  test_outcome_strategies.py  test_player_state_strategies.py  test_training_filter.py
tests/unit/modeling/: test_filter_key.py  test_local_artifact_store.py  test_run_model_use_case.py  test_s3_artifact_store.py
(+8 files in other folders)
