[project]
name = "model-api"
version = "0.1.1"
description = "FastAPI cricket model training and inference API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "fastapi>=0.115",
    "numpy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
